z-index fixes

--- a/style.css
+++ b/style.css
@@ -142,11 +142,16 @@ body {
 
 .logo {
     color: #333;
-    font-size: 22px;
+    font-size: 20px;
     text-decoration: none;
     font-weight: 800;
     letter-spacing: 0.05em;
     display: none;
+}
+
+.logo span {
+    font-size: 16px;
+    font-weight: 300;
 }
 
 .mobile-logo {
@@ -236,13 +241,18 @@ body {
     font-size: 21px;
     line-height: 1.4em;
     transition: .3s all ease-in-out;
+    display: flex;
 }
 
 .nav-link span {
-    font-size: 20px;
     opacity: 0;
     margin: 0 3px 0 0;
+    width: 15px;
     transition: .3s all ease-in-out;
+}
+
+.nav-link span img {
+    width: 100%;
 }
 
 .nav-link:hover span {
@@ -283,8 +293,12 @@ body {
 /* FOOTER */
 
 .footer {
-    bottom: 10px;
-    left: 14px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 2px 5px;
+    background: rgba(255,255,255,.9);
+    z-index: 301;
 }
 
 .footer__copyright {
@@ -338,28 +352,22 @@ body {
     font-family: "Merriweather", serif;
     font-optical-sizing: auto;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 11px;
     line-height: 1.7em;
     color: #666;
     max-width: 420px;
     margin: 0;
-    padding: 0 0 20px;
+    padding: 0 0 7px;
 }
 
 .post-container p {
     font-family: "Merriweather", serif;
     font-optical-sizing: auto;
-    font-size: 11px;
+    font-size: 10px;
     font-weight: 600;
     margin: 0;
-    padding: 0 0 20px;
+    padding: 0 0 7px;
     color: #333;
-}
-
-.post-container video {
-    width: 100%;
-    height: auto;
-    max-width: 900px;
 }
 
 .artworks-container {
@@ -379,10 +387,15 @@ body {
     flex-shrink: 0;
     padding: 0 20px 25px;
     width: 100%;
-    max-width: 700px;
 }
 
-.artworks-container img {
+.artwork-container img {
+    height: 100%;
+    width: 100%;
+}
+
+.artwork-container video {
+    height: 100%;
     width: 100%;
 }
 
@@ -396,8 +409,6 @@ body {
         top: 0;
         width: 190px;
         padding: 10px 10px 25px 10px;
-        height: auto;
-        border-bottom-right-radius: 130px;
     }
 
     .logo {
@@ -421,7 +432,7 @@ body {
     }
 
     .nav-link span {
-        font-size: 13px;
+        width: 10px;
     }
 
     .nav-category h4 {
@@ -465,5 +476,14 @@ body {
     .artwork-container {
         flex-shrink: 0;
         padding: 0 25px 0 0;
+        width: auto;
+    }
+
+    .artwork-container img {
+        width: auto
+    }
+
+    .artwork-container video {
+        width: auto;
     }
 }
